--- a/testng/test-output/old/Default suite/methods.html
+++ b/testng/test-output/old/Default suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e98f8f">  <td>20/10/11 12:05:29</td>   <td>0</td> <td title="&gt;&gt;AppTest.befSuite()[pri:0, instance:com.app.testng.testng.AppTest@1fa268de]">&gt;&gt;befSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150268540</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>20/10/11 12:05:35</td>   <td>6163</td> <td>&nbsp;</td><td title="&gt;&gt;AppTest.befTest()[pri:0, instance:com.app.testng.testng.AppTest@1fa268de]">&gt;&gt;befTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150268540</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>20/10/11 12:05:35</td>   <td>6231</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppTest.befClass()[pri:0, instance:com.app.testng.testng.AppTest@1fa268de]">&gt;&gt;befClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150268540</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>20/10/11 12:05:39</td>   <td>10157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppTest.befMet()[pri:0, instance:com.app.testng.testng.AppTest@1fa268de]">&gt;&gt;befMet</td> 
-<td>&nbsp;</td>  <td>main@150268540</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>20/10/11 12:05:39</td>   <td>10157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.app.testng.testng.AppTest@1fa268de]">test1</td> 
-  <td>main@150268540</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>20/10/11 12:06:09</td>   <td>40094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppTest.aftMet()[pri:0, instance:com.app.testng.testng.AppTest@1fa268de]">&lt;&lt;aftMet</td> 
-<td>&nbsp;</td>  <td>main@150268540</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>20/10/11 12:06:09</td>   <td>40095</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppTest.aftClass()[pri:0, instance:com.app.testng.testng.AppTest@1fa268de]">&lt;&lt;aftClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150268540</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>20/10/11 12:06:09</td>   <td>40139</td> <td>&nbsp;</td><td title="&lt;&lt;AppTest.aftTest()[pri:0, instance:com.app.testng.testng.AppTest@1fa268de]">&lt;&lt;aftTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150268540</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>20/10/11 12:06:14</td>   <td>45387</td> <td title="&lt;&lt;AppTest.aftSuite()[pri:0, instance:com.app.testng.testng.AppTest@1fa268de]">&lt;&lt;aftSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@150268540</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>20/08/12 23:35:28</td>   <td>0</td> <td title="&gt;&gt;AppTest.befSuite()[pri:0, instance:com.app.testng.testng.AppTest@4f18837a]">&gt;&gt;befSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@915416632</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>20/08/12 23:35:44</td>   <td>16438</td> <td>&nbsp;</td><td title="&gt;&gt;AppTest.befTest()[pri:0, instance:com.app.testng.testng.AppTest@4f18837a]">&gt;&gt;befTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@915416632</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>20/08/12 23:35:44</td>   <td>16477</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppTest.befClass()[pri:0, instance:com.app.testng.testng.AppTest@4f18837a]">&gt;&gt;befClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@915416632</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>20/08/12 23:35:44</td>   <td>16485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppTest.befMet()[pri:0, instance:com.app.testng.testng.AppTest@4f18837a]">&gt;&gt;befMet</td> 
+<td>&nbsp;</td>  <td>main@915416632</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>20/08/12 23:35:44</td>   <td>16485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.test1()[pri:0, instance:com.app.testng.testng.AppTest@4f18837a]">test1</td> 
+  <td>main@915416632</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>20/08/12 23:39:32</td>   <td>244369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppTest.aftMet()[pri:0, instance:com.app.testng.testng.AppTest@4f18837a]">&lt;&lt;aftMet</td> 
+<td>&nbsp;</td>  <td>main@915416632</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>20/08/12 23:39:32</td>   <td>244373</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppTest.aftClass()[pri:0, instance:com.app.testng.testng.AppTest@4f18837a]">&lt;&lt;aftClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@915416632</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>20/08/12 23:39:32</td>   <td>244373</td> <td>&nbsp;</td><td title="&lt;&lt;AppTest.aftTest()[pri:0, instance:com.app.testng.testng.AppTest@4f18837a]">&lt;&lt;aftTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@915416632</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>20/08/12 23:39:38</td>   <td>250195</td> <td title="&lt;&lt;AppTest.aftSuite()[pri:0, instance:com.app.testng.testng.AppTest@4f18837a]">&lt;&lt;aftSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@915416632</td>   <td></td> </tr>
 </table>
